[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "smeeme"
version = "0.1.0"
description = "Pythonic wrapper for smee.io client with queue-based workflow processing"
requires-python = ">=3.11"
authors = [{name = "Bullish Design"}]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "typing-extensions>=4.10",
]

keywords = ["smee", "webhooks", "tunnel", "pydantic", "queue", "workflows"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.111"]
redis = ["redis>=5.0"]
cli = ["typer>=0.9", "rich>=13.0"]
all = ["smeeme[fastapi,redis,cli]"]

dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Bulllish-Design/smeeme"
Repository = "https://github.com/Bulllish-Design/smeeme"
Issues = "https://github.com/Bulllish-Design/smeeme/issues"

[project.scripts]
smeeme = "smeeme.cli:main"


[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E","F","I","W","UP","B"]
lint.ignore = ["E501", "W293"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["tests/"]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src/tests"]
addopts = "-q -ra"
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning"
]
markers = [
  #"slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests that exercise external services"
]
